2008-04-17  Martin Lambers <marlam@marlam.de>

	* src/heightmap_selector.h, src/heightmap_selector.cpp: Remove unused
	lock.

2008-04-16  Martin Lambers <marlam@marlam.de>

	* src/heightmap_selector.h, src/heightmap_selector.cpp,
	src/view_area.h, src/view_area.cpp, src/cvlview.h, src/cvlview.cpp,
	src/Makefile.am: Add widgets to select 3D views via height maps. The
	functionality is not yet implemented.
	* src/heightmap_selector.h, src/heightmap_selector.cpp,
	src/cvlview.cpp: Make GL context current before using CVL functions.

2008-04-14  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Use GL_CLAMP_TO_EDGE instead of GL_CLAMP for 
	textures.

2008-03-04  Martin Lambers <marlam@marlam.de>

	* mhlib/Makefile.am, src/Makefile.am: Fix potential problems with
	VPATH builds.

2008-02-26  Martin Lambers <marlam@marlam.de>

	* gnulib/*: Update gnulib. Import havelib module.

2008-01-19  Martin Lambers <marlam@marlam.de>

	* *: Update license to GPLv3 or later.
	* gnulib/*: Update gnulib.

2008-01-18  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_alloc.h, mhlib/mh_alloc.c, mhlib/mh_math.h,
	mhlib/mh_math.c: Do not use "extern inline" because its semantics are
	incompatiblie between gcc-4.3 and prior versions.

2008-01-16  Martin Lambers <marlam@marlam.de>

	* README: Update for version 0.2.1.

2008-01-14  Martin Lambers <marlam@marlam.de>

	* conf/conf.cpp: Fix error message for invalid content.

2008-01-10  Martin Lambers <marlam@marlam.de>

	* NEWS: Update.
	* doc/cvlview.1, doc/cvlview.texi: Update.
	* src/range_selector.h, src/range_selector.cpp: Improve range
	spinboxes. This change replaces the erraneous patch from 2007-12-06.
	* src/range_selector.h, src/range_selector.cpp: Simplify the previous
	change.
	* src/main.cpp, src/cvlview.cpp: Update copyright year in --version
	output and AboutBox.

2008-01-09  Martin Lambers <marlam@marlam.de>

	* configure.ac: Require CVL >= 0.2.3 to benefit from a fix to the
	pseudo color function.
	* README: Update.
